--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,35 @@
 services:
-  # mysql:
-  #   image: mysql:8.0
-  #   container_name: bibolib-mysql
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: rootpassword
-  #     MYSQL_DATABASE: bibolib
-  #     MYSQL_USER: bibolib_user
-  #     MYSQL_PASSWORD: bibolib_password
-  #   ports:
-  #     - "3307:3306"
-  #   volumes:
-  #     - mysql_data:/var/lib/mysql
-  #     - ./bibolib.sql:/docker-entrypoint-initdb.d/bibolib.sql
-  #   networks:
-  #     - appnet
-  #   healthcheck:
-  #     test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-  #     timeout: 20s
-  #     retries: 10
+  cron:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    command: >
+      sh -c "while true; do python purge_expired_reservations.py; sleep 14400; done"
+    depends_on:
+      - mysql
+    networks:
+      - appnet
+    env_file:
+      - .env
+  mysql:
+    image: mysql:8.0
+    container_name: bibolib-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: bibolib
+      MYSQL_USER: bibolib_user
+      MYSQL_PASSWORD: bibolib_password
+    ports:
+      - "3307:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./database/bibolib_db.sql:/docker-entrypoint-initdb.d/bibolib.sql
+    networks:
+      - appnet
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   activity_logs:
     build:
@@ -39,12 +51,14 @@ services:
     depends_on:
       activity_logs:
         condition: service_started
+      mysql:
+        condition: service_healthy
     networks:
       - appnet
     env_file:
       - .env
     environment:
-      - DATABASE_URL=mysql+pymysql://root:@host.docker.internal:3306/bibolib
+      - DATABASE_URL=mysql+pymysql://bibolib_user:bibolib_password@mysql:3306/bibolib
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
@@ -55,7 +69,6 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      # Anonymous volume to keep container's node_modules (faster than bind mount on Windows)
       - /app/node_modules
     depends_on:
       - backend
@@ -64,8 +77,9 @@ services:
     env_file:
       - .env
 
-# volumes:
-#   mysql_data:
+
+volumes:
+  mysql_data:
 
 networks:
   appnet:
